# api/openapi/identity.yaml
@@ -62,6 +62,8 @@ paths:
           $ref: 'common.yaml#/components/responses/TooManyRequests'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
   /api/v1/auth/logout:
     post:
       operationId: logout
@@ -78,6 +80,8 @@ paths:
           $ref: 'common.yaml#/components/responses/Forbidden'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
   /api/v1/auth/me:
     get:
       operationId: getMe
@@ -94,6 +98,8 @@ paths:
           $ref: 'common.yaml#/components/responses/Unauthorized'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
   /api/v1/auth/password:
     post:
       operationId: changePassword
@@ -124,6 +130,8 @@ paths:
           $ref: 'common.yaml#/components/responses/TooManyRequests'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
   /api/v1/auth/password-reset/request:
     post:
       operationId: requestPasswordReset
@@ -156,6 +164,8 @@ paths:
           $ref: 'common.yaml#/components/responses/ValidationFailed'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
   /api/v1/auth/password-reset/confirm:
     post:
       operationId: confirmPasswordReset
@@ -185,6 +195,8 @@ paths:
           $ref: 'common.yaml#/components/responses/ValidationFailed'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
   /api/v1/users:
     get:
       operationId: listUsers
@@ -218,6 +230,8 @@ paths:
           $ref: 'common.yaml#/components/responses/ValidationFailed'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
     post:
       operationId: createUser
       tags: [users]
@@ -251,6 +265,8 @@ paths:
           $ref: 'common.yaml#/components/responses/ValidationFailed'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
   /api/v1/users/{id}/deactivate:
     post:
       operationId: deactivateUser
@@ -274,6 +290,8 @@ paths:
           $ref: 'common.yaml#/components/responses/ValidationFailed'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
   /api/v1/users/{id}/reactivate:
     post:
       operationId: reactivateUser
@@ -295,6 +313,8 @@ paths:
           $ref: 'common.yaml#/components/responses/ValidationFailed'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
   /api/v1/users/{id}/roles:
     put:
       operationId: setUserRoles
@@ -328,6 +348,8 @@ paths:
           $ref: 'common.yaml#/components/responses/ValidationFailed'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
   /api/v1/users/{id}/admin-membership:
     post:
       operationId: grantAdminMembership
@@ -361,6 +383,8 @@ paths:
           $ref: 'common.yaml#/components/responses/ValidationFailed'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
   /api/v1/users/{id}/admin-membership/revoke:
     post:
       operationId: revokeAdminMembership
@@ -395,6 +419,8 @@ paths:
           $ref: 'common.yaml#/components/responses/ValidationFailed'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
   /api/v1/users/{id}/password-reset:
     post:
       operationId: resetUserPassword
@@ -438,6 +464,8 @@ paths:
           $ref: 'common.yaml#/components/responses/ValidationFailed'
         '500':
           $ref: 'common.yaml#/components/responses/InternalError'
+        '503':
+          $ref: 'common.yaml#/components/responses/ServiceUnavailable'
 components:
   securitySchemes:
     sessionCookie:
